# mothertongues

./: .gitignore  .gitmodules  CNAME  Contributing.md  LICENSE  MANIFEST.in  README.md  TODO.txt  hatch_build.py  mkdocs.yml  pyproject.toml  setup.cfg  update-plan.md
.github/: dependabot.yml
.github/workflows/: docs.yml  release-tests.yml  tests.yml
docs/: index.md  install.md  quickstart.md  requirements.txt
docs/developer/: Contributing.md  install.md  misc.md  prerequisites.md  quickstart.md  unittests.md  vscode.md
docs/guides/: build.md  index.md  prepare.md  search.md
docs/nocode/: install.md
docs/overrides/: main.html
docs/overrides/partials/: comments.html
docs/source/: conf.py  configuration.rst  index.rst
latest/: 404.html  index.html  objects.inv
latest/developer/Contributing/: index.html
latest/developer/prerequisites/: index.html
latest/developer/quickstart/: index.html
latest/developer/unittests/: index.html
latest/developer/vscode/: index.html
latest/guides/: index.html
latest/guides/prepare/: index.html
latest/guides/search/: index.html
latest/install/: index.html
latest/nocode/install/: index.html
latest/overrides/partials/: comments.html
latest/quickstart/: index.html
mothertongues/: __main__.py  api.py  cli.py  dictionary.py  exceptions.py  utils.py
mothertongues/config/: __init__.py  models.py
mothertongues/parsers/: __init__.py  csv_parser.py  json_parser.py  psv_parser.py  tsv_parser.py  utils.py  xlsx_parser.py
mothertongues/processors/: index_builder.py  sorter.py
mothertongues/schemas/: config.json  manifest.json
mothertongues/tests/: base_test_case.py  run.py  test_cli.py  test_configuration.py  test_dictionary_data.py  test_exporter.py  test_index.py  test_parsers.py  test_sorter.py  utils.py
mothertongues/tests/data/: alphabet.json  alphabet_with_numbers_numeric.json  alphabet_with_numbers_string.json  alphabet_with_punctuation.json  config.json  config_about.json  config_csv.json  config_csv_multi.json  config_custom.json  config_data_check.json  config_data_search_algs.json  config_duplicate.json  config_empty.json  config_minimal.json  config_missing_char.json  config_missing_fields.json  config_psv.json  config_transducers.json  config_tsv.json  config_xlsx.json  config_xml.json  data.csv  data.json  data.psv  data.tsv  data.xlsx  data_check.csv  data_custom_format.data  data_duplicate.csv  data_header.csv  data_header.psv  data_header.tsv  data_header.xlsx  data_invalid.json  data_listof.json  data_minimal.csv  data_missing_char.csv  data_missing_fields.psv  data_multi.csv  manifest_csv.json  (+13 more)
mothertongues/tests/data/transducers/: danish-approx.csv
