[tool.poetry]
name = "mothertongues"
version = "1.0.20250728"
description = ""
authors = ["roedoejet <hello@aidanpine.ca>"]
readme = "README.md"
include = ["mothertongues/ui", "mothertongues/ui/*", "mothertongues/ui/*/*", "mothertongues/schemas"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = [
      {version = "^1.24.4", python = "<3.12"},
      {version = "^1.26.4", python = ">=3.12"},
]
fastapi = "^0.116.1"
loguru = "^0.6.0"
typer = {version = "0.9.0", extras = ["all"]}
httpx = "^0.28.1"
gitlint = "^0.19.0"
pydantic = "^2.4.2"
openpyxl = "^3.1.2"
jsonpath-ng = "^1.5.3"
jsonpointer = "^2.3"
nltk = "^3.8.1"
rank-bm25 = "^0.2.2"
jsf = "^0.8.0"
questionary = "^2.0.0"
httpcore = "^1.0.9"

[tool.poetry.scripts]
mothertongues = "mothertongues.cli:app"
mtd = "mothertongues.cli:app"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.12.0"
mypy = "^1.4.1"
pre-commit = "^2.20.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.5"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mike = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
