[project]
name = "mothertongues"
version = "1.0.20250728"
description = ""
authors = [{ name = "roedoejet", email = "hello@aidanpine.ca" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    # Pinned below 0.10: 0.10+ changes error-output rendering (routed through
    # a different Click result attribute, wrapped in a panel, lowercased
    # parameter names), which breaks test_cli.py's output assertions --
    # see update-plan.md phase 6.
    "typer[all]>=0.9.0,<0.10.0",
    # typer 0.9.x declares click>=7.1.1,<9.0.0, which is wide enough to admit
    # click 8.1.4+, but that combination crashes on startup with
    # "TypeError: Secondary flag is not valid for non-boolean flag." (a
    # known typer/click incompatibility). uv.lock happens to already resolve
    # a safe click, but a plain `pip install` of the built wheel does not,
    # so this needs to be pinned explicitly rather than left implicit.
    "click<8.1.4",
    "rich>=13.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "openpyxl>=3.1.5",
    "jsonpath-ng>=1.8.0",
    "jsonpointer>=3.0.0",
    "nltk>=3.9.1",
    "rank-bm25>=0.2.2",
    # Pinned below 0.9: 0.9+ fixes a jsf bug (ghandic/jsf#80) that our fuzz
    # tests were incidentally relying on to avoid a real bug in
    # MTDictionary.transduce() -- see update-plan.md phase 6.
    "jsf>=0.8.0,<0.9.0",
    "questionary>=2.1.0",
    "joblib>=1.3.0",
]

[project.scripts]
mothertongues = "mothertongues.cli:app"
mtd = "mothertongues.cli:app"

[dependency-groups]
dev = [
    "isort>=5.13.2",
    # Pinned below 23: 24.x reformats existing code (parenthesization style
    # changed) and mypy 1.5+ surfaces 2 pre-existing type errors in
    # dictionary.py that 1.4.1 doesn't catch -- both deferred to
    # update-plan.md phase 6 rather than folded into this migration.
    "black>=22.12.0,<23.0",
    "mypy>=1.4.1,<1.5.0",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.7",
    "mkdocstrings[python]>=1.0.6",
    "mike>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mothertongues"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"
